# ros2_ws

./: drone_commands.md  my.txt  run.md
src/landing_zone_system/: CMakeLists.txt  package.xml
src/landing_zone_system/include/landing_zone_system/: Detectors.hpp  FramePreProcessor.hpp  ICapture.hpp  LandingZoneChooser.hpp  LandingZoneSystem.hpp  LandingZoneTracker.hpp  OpenCvCapture.hpp  RosCapture.hpp  SearchConfig.hpp  VideoAnnotator.hpp  VideoSourceFactory.hpp
src/landing_zone_system/launch/: gazebo.launch.py  landing_zone.launch.py  launch.py
src/landing_zone_system/src/: Detectors.cpp  FramePreProcessor.cpp  LandingZoneChooser.cpp  LandingZoneSystem.cpp  LandingZoneTracker.cpp  VideoAnnotator.cpp  landing_zone_node.cpp  landing_zone_node.hpp  main.cpp  main2.cpp  main3.cpp  main4.cpp
src/landing_zone_system/worlds/: bayland.world  baylands.world  empty_camera.world  grass.world
src/simple_drone_control/: package.xml  setup.py
src/simple_drone_control/simple_drone_control/: simple_drone_control.py
